--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -25,19 +25,19 @@
             <Blend />
          </effect>
       </Button>
-      <Button layoutY="304.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" text="Button" />
-      <Button layoutX="3.0" layoutY="390.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" text="Button" />
-      <Button layoutX="691.0" layoutY="341.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
-      <Button layoutX="692.0" layoutY="426.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
-      <Button layoutX="691.0" layoutY="514.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" text="Button" />
-      <Button layoutX="423.0" layoutY="2.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" text="Button" />
-      <Button layoutX="510.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" text="Button" />
-      <Button layoutX="599.0" layoutY="3.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="75.0" text="Button" />
+      <Button layoutY="304.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" />
+      <Button layoutX="3.0" layoutY="390.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="112.0" />
+      <Button layoutX="691.0" layoutY="341.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
+      <Button layoutX="692.0" layoutY="426.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
+      <Button layoutX="691.0" layoutY="514.0" mnemonicParsing="false" prefHeight="74.0" prefWidth="106.0" />
+      <Button layoutX="423.0" layoutY="2.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
+      <Button layoutX="510.0" layoutY="-1.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="75.0" />
+      <Button layoutX="599.0" layoutY="3.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="75.0" />
       <Button fx:id="weaponDeck" contentDisplay="BOTTOM" disable="true" layoutX="685.0" layoutY="147.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="78.0">
          </Button>
       <Button fx:id="powerupDeck" disable="true" layoutX="709.0" layoutY="21.0" mnemonicParsing="false" prefHeight="72.0" prefWidth="51.0" />
       <Label fx:id="mylabel" layoutX="120.0" layoutY="156.0" prefHeight="29.0" prefWidth="51.0" />
-      <Button fx:id="showMap" layoutX="340.0" layoutY="286.0" mnemonicParsing="false" onAction="#showMap" prefHeight="57.0" prefWidth="142.0" text="READY??">
+      <Button fx:id="showMap" layoutX="330.0" layoutY="543.0" mnemonicParsing="false" onAction="#showMap" prefHeight="57.0" prefWidth="142.0" text="READY??" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <font>
             <Font size="24.0" />
          </font></Button>
@@ -56,9 +56,9 @@
                         <ImageView fx:id="imPowerupCard1" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="-1.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard2" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="imPowerupCard3" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="328.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="bDiscardPowerup1" layoutX="110.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bDiscardPowerup2" layoutX="275.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
-                        <Button fx:id="bDiscardPowerup3" layoutX="436.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bDiscardPowerup1" layoutX="109.0" layoutY="4.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bDiscardPowerup2" layoutX="278.0" layoutY="4.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="bDiscardPowerup3" layoutX="435.0" layoutY="4.0" mnemonicParsing="false" text="discard" />
                      </children>
                   </AnchorPane>
             </content>
@@ -97,12 +97,28 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="405.0" prefWidth="543.0">
                      <children>
-                        <Button fx:id="enemyCharacter1" layoutX="124.0" layoutY="46.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="405.0" />
-                        <ImageView fx:id="enemy1card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy1card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy1card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="enemyCharacter1" layoutX="92.0" layoutY="27.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="437.0" />
+                        <ImageView fx:id="enemy1card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy1card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy1card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy1Actions" fitHeight="120.0" fitWidth="51.0" layoutX="61.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/actionsYellow.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="imEnemyCharacter1" fitHeight="120.0" fitWidth="435.0" layoutX="92.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/characterYellow.jpg" />
+                           </image></ImageView>
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -110,12 +126,28 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter2" layoutX="120.0" layoutY="43.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="409.0" />
-                        <ImageView fx:id="enemy2card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy2card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy2card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="enemyCharacter2" layoutX="92.0" layoutY="27.0" mnemonicParsing="false" prefHeight="140.0" prefWidth="438.0" />
+                        <ImageView fx:id="enemy2card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy2card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy2card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy2Actions" fitHeight="120.0" fitWidth="51.0" layoutX="65.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/actionsGreen.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="imEnemyCharacter2" fitHeight="120.0" fitWidth="448.0" layoutX="90.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/characterGreen.jpg" />
+                           </image></ImageView>
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -123,12 +155,28 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter3" layoutX="122.0" layoutY="45.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="407.0" />
-                        <ImageView fx:id="enemy3card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy3card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy3card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="enemyCharacter3" layoutX="92.0" layoutY="27.0" mnemonicParsing="false" prefHeight="140.0" prefWidth="438.0" />
+                        <ImageView fx:id="enemy3card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy3card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy3card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy3Actions" fitHeight="120.0" fitWidth="51.0" layoutX="58.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/actionsGrey.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="imEnemyCharacter3" fitHeight="116.0" fitWidth="438.0" layoutX="92.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/characterGrey.jpg" />
+                           </image></ImageView>
                      </children></AnchorPane>
               </content>
             </Tab>
@@ -136,16 +184,53 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="enemyCharacter4" layoutX="119.0" layoutY="47.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="410.0" />
-                        <ImageView fx:id="enemy4card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy4card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy4card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="enemyCharacter4" layoutX="92.0" layoutY="27.0" mnemonicParsing="false" prefHeight="140.0" prefWidth="438.0" />
+                        <ImageView fx:id="enemy4card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy4card2" fitHeight="150.0" fitWidth="112.0" layoutX="208.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="enemy4card3" fitHeight="150.0" fitWidth="112.0" layoutX="355.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@emptyWeapon.jpg" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="enemy4Actions" fitHeight="120.0" fitWidth="51.0" layoutX="57.0" layoutY="47.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/actionsViolet.jpg" />
+                           </image></ImageView>
+                        <ImageView fx:id="imEnemyCharacter4" fitHeight="116.0" fitWidth="442.0" layoutX="90.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@characters/characterViolet.jpg" />
+                           </image></ImageView>
                      </children></AnchorPane>
               </content>
             </Tab>
         </tabs>
       </TabPane>
+      <Button fx:id="cell02" layoutX="153.0" layoutY="141.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="106.0" />
+      <Button fx:id="cell01" layoutX="148.0" layoutY="271.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="106.0" />
+      <Button fx:id="cell00" layoutX="139.0" layoutY="413.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="99.0" />
+      <Button fx:id="cell10" layoutX="262.0" layoutY="415.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="127.0" />
+      <Button fx:id="cell11" layoutX="274.0" layoutY="276.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="112.0" />
+      <Button fx:id="cell12" layoutX="270.0" layoutY="138.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="127.0" />
+      <Button fx:id="cell22" layoutX="412.0" layoutY="142.0" mnemonicParsing="false" prefHeight="104.0" prefWidth="112.0" />
+      <Button fx:id="cell21" layoutX="412.0" layoutY="271.0" mnemonicParsing="false" prefHeight="120.0" prefWidth="120.0" />
+      <Button fx:id="cell20" layoutX="408.0" layoutY="411.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="120.0" />
+      <Button fx:id="cell30" layoutX="539.0" layoutY="402.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="112.0" />
+      <Button fx:id="cell31" layoutX="547.0" layoutY="272.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="99.0" />
+      <Button fx:id="cell32" layoutX="559.0" layoutY="144.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="99.0" />
+      <ImageView fx:id="ammoCell02" fitHeight="49.0" fitWidth="51.0" layoutX="148.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell00" fitHeight="49.0" fitWidth="51.0" layoutX="139.0" layoutY="415.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell10" fitHeight="49.0" fitWidth="51.0" layoutX="262.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell11" fitHeight="49.0" fitWidth="51.0" layoutX="274.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell12" fitHeight="49.0" fitWidth="51.0" layoutX="274.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell21" fitHeight="49.0" fitWidth="51.0" layoutX="412.0" layoutY="341.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell20" fitHeight="49.0" fitWidth="51.0" layoutX="423.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell31" fitHeight="49.0" fitWidth="51.0" layoutX="547.0" layoutY="341.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell32" fitHeight="49.0" fitWidth="51.0" layoutX="609.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
