--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -44,7 +44,7 @@
       <ImageView fx:id="imweaponDeck" disable="true" fitHeight="128.0" fitWidth="86.0" layoutX="681.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="impowerupDeck" disable="true" fitHeight="83.0" fitWidth="66.0" layoutX="702.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
       </ImageView>
-      <TabPane layoutX="882.0" layoutY="474.0" prefHeight="229.0" prefWidth="511.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="890.0" layoutY="533.0" prefHeight="188.0" prefWidth="492.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Powerup Cards">
             <content>
@@ -98,7 +98,7 @@
         <tabs>
           <Tab text="enemy">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="405.0" prefWidth="543.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="384.0" prefWidth="527.0">
                      <children>
                         <Button fx:id="enemyCharacter1" layoutX="84.0" layoutY="32.0" mnemonicParsing="false" prefHeight="131.0" prefWidth="439.0" />
                         <ImageView fx:id="enemy1card1" fitHeight="150.0" fitWidth="112.0" layoutX="61.0" layoutY="194.0" pickOnBounds="true" preserveRatio="true">
@@ -415,5 +415,9 @@
       <ImageView fx:id="playerDamage9" fitHeight="29.0" fitWidth="22.0" layoutX="429.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerDamage10" fitHeight="29.0" fitWidth="22.0" layoutX="462.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerDamage11" fitHeight="29.0" fitWidth="22.0" layoutX="491.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="94.0" layoutY="577.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="51.0" />
+      <Button layoutX="94.0" layoutY="605.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
+      <Button layoutX="94.0" layoutY="633.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
+      <Label fx:id="labelProva" layoutX="819.0" layoutY="492.0" prefHeight="36.0" prefWidth="551.0" textFill="RED" />
    </children>
 </AnchorPane>
