--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -44,7 +44,7 @@
       <ImageView fx:id="imweaponDeck" disable="true" fitHeight="128.0" fitWidth="86.0" layoutX="681.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="impowerupDeck" disable="true" fitHeight="83.0" fitWidth="66.0" layoutX="702.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
       </ImageView>
-      <TabPane layoutX="890.0" layoutY="533.0" prefHeight="188.0" prefWidth="492.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="890.0" layoutY="515.0" prefHeight="188.0" prefWidth="492.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Powerup Cards">
             <content>
@@ -79,6 +79,21 @@
                         <Button fx:id="bDiscardWeapon1" layoutX="106.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
                         <Button fx:id="bDiscardWeapon2" layoutX="269.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
                         <Button fx:id="bDiscardWeapon3" layoutX="428.0" layoutY="30.0" mnemonicParsing="false" text="discard" />
+                        <Button fx:id="addFire1" layoutX="75.0" layoutY="115.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="addFire2" layoutX="239.0" layoutY="115.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="addFire3" layoutX="403.0" layoutY="115.0" mnemonicParsing="false" onAction="#addFiremode" prefHeight="25.0" prefWidth="86.0" text="ADD FIREMODE">
+                           <font>
+                              <Font size="10.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
             </content>
@@ -113,7 +128,7 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="enemy1Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsYellow.jpg" />
@@ -162,7 +177,7 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="enemy2Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsGreen.jpg" />
@@ -211,7 +226,7 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="enemy3Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsGrey.jpg" />
@@ -292,7 +307,7 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fx:id="enemy4Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsViolet.jpg" />
@@ -415,9 +430,19 @@
       <ImageView fx:id="playerDamage9" fitHeight="29.0" fitWidth="22.0" layoutX="429.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerDamage10" fitHeight="29.0" fitWidth="22.0" layoutX="462.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="playerDamage11" fitHeight="29.0" fitWidth="22.0" layoutX="491.0" layoutY="616.0" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="94.0" layoutY="577.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="51.0" />
-      <Button layoutX="94.0" layoutY="605.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
-      <Button layoutX="94.0" layoutY="633.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
-      <Label fx:id="labelProva" layoutX="819.0" layoutY="492.0" prefHeight="36.0" prefWidth="551.0" textFill="RED" />
+      <Button fx:id="moveButton" layoutX="94.0" layoutY="577.0" mnemonicParsing="false" prefHeight="22.0" prefWidth="51.0" />
+      <Button fx:id="grabButton" layoutX="94.0" layoutY="605.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
+      <Button fx:id="shootButton" layoutX="94.0" layoutY="633.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" />
+      <Label fx:id="labelProva" layoutX="817.0" layoutY="483.0" prefHeight="36.0" prefWidth="551.0" textFill="RED" />
+      <Button layoutX="666.0" layoutY="604.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="162.0" text="SHOOT">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Button layoutX="666.0" layoutY="658.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="162.0" text="END TURN">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
