--- a/src/main/resources/chooseMap.fxml
+++ b/src/main/resources/chooseMap.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="396.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
+<AnchorPane prefHeight="510.0" prefWidth="457.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
       <RadioButton fx:id="rbmap1" layoutX="79.0" layoutY="165.0" mnemonicParsing="false" onAction="#chooseMap" prefHeight="28.0" prefWidth="77.0" text="mappa 1">
          <toggleGroup>
@@ -37,6 +39,13 @@
             <Image url="@mappa4.jpg" />
          </image>
       </ImageView>
+      <Label layoutX="29.0" layoutY="400.0" prefHeight="28.0" prefWidth="100.0" text="SKULL'S NUMBER" textAlignment="RIGHT" />
+      <Label layoutX="288.0" layoutY="406.0" prefHeight="17.0" prefWidth="110.0" text="SUDDEN DEATH?" />
+      <TextField fx:id="skulls" layoutX="17.0" layoutY="438.0" promptText="FROM 1 TO 8" />
+      <Label fx:id="errorSkulls" layoutX="29.0" layoutY="475.0" prefHeight="17.0" prefWidth="110.0" text="FROM 1 TO 8" textFill="RED" visible="false" />
+      <RadioButton fx:id="suddenDeathYes" layoutX="315.0" layoutY="442.0" mnemonicParsing="false" onAction="#suddenDeath" text="YES" />
+      <RadioButton fx:id="suddenDeathNo" layoutX="316.0" layoutY="475.0" mnemonicParsing="false" onAction="#suddenDeath" text="NO" />
+      <Button fx:id="sendButton" layoutX="203.0" layoutY="447.0" mnemonicParsing="false" onAction="#sendSetting" text="SEND" />
 
    </children>
 </AnchorPane>
