--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -70,9 +70,9 @@
                         <Button fx:id="bWeaponCard1" disable="true" layoutY="3.0" mnemonicParsing="false" prefHeight="194.0" prefWidth="132.0" />
                         <Button fx:id="bWeaponCard2" disable="true" layoutX="164.0" layoutY="3.0" mnemonicParsing="false" prefHeight="194.0" prefWidth="131.0" />
                         <Button fx:id="bWeaponCard3" disable="true" layoutX="328.0" layoutY="4.0" mnemonicParsing="false" prefHeight="193.0" prefWidth="129.0" />
-                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="192.0" fitWidth="150.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="164.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="192.0" fitWidth="150.0" layoutX="329.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard1" disable="true" fitHeight="150.0" fitWidth="127.0" layoutX="3.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard2" disable="true" fitHeight="150.0" fitWidth="127.0" layoutX="166.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="imWeaponCard3" disable="true" fitHeight="150.0" fitWidth="127.0" layoutX="329.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
                         <Button fx:id="bReloadWeapon1" layoutX="106.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
                         <Button fx:id="bReloadWeapon2" layoutX="270.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
                         <Button fx:id="bReloadWeapon3" layoutX="429.0" layoutY="2.0" mnemonicParsing="false" text="reload" />
@@ -94,6 +94,9 @@
                               <Font size="10.0" />
                            </font>
                         </Button>
+                        <Button fx:id="selectWeaponButton1" layoutX="107.0" layoutY="89.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
+                        <Button fx:id="selectWeaponButton2" layoutX="269.0" layoutY="89.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
+                        <Button fx:id="selectWeaponButton3" layoutX="430.0" layoutY="88.0" mnemonicParsing="false" onAction="#selectWeapon" text="SELECT" />
                      </children>
                   </AnchorPane>
             </content>
@@ -439,7 +442,7 @@
             <Font size="17.0" />
          </font>
       </Button>
-      <Button layoutX="666.0" layoutY="658.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="162.0" text="END TURN">
+      <Button layoutX="666.0" layoutY="646.0" mnemonicParsing="false" prefHeight="49.0" prefWidth="162.0" text="END TURN">
          <font>
             <Font size="25.0" />
          </font>
